[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sons/sombotaopressionado.mp3" type="AudioStream" id=1]
[ext_resource path="res://Codigos/HUDS/cenaperdeu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/classic_memesbruh03.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Imagens/gameOverFundo.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("animacao/fundo:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "transicaoperdeu"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("animacao/fundo:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.803922 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 90
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=5]
size = 90
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0 )

[node name="cenaperdeu" type="Node2D"]
visible = false
script = ExtResource( 2 )

[node name="animacao" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/transicaoperdeu = SubResource( 2 )

[node name="fundo" type="ColorRect" parent="animacao"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0 )

[node name="fundoperdeu" type="TextureRect" parent="animacao"]
visible = false
margin_left = 583.0
margin_top = 131.0
margin_right = 1383.0
margin_bottom = 931.0
texture = ExtResource( 4 )
expand = true

[node name="botaoReiniciar" type="Button" parent="animacao/fundoperdeu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -147.0
margin_right = 205.0
margin_bottom = -66.0
custom_colors/font_color_hover = Color( 1, 0.984314, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Reiniciar"

[node name="botaoSair" type="Button" parent="animacao/fundoperdeu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = 18.0
margin_right = 142.0
margin_bottom = 94.0
custom_colors/font_color_hover = Color( 1, 0.937255, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "Sair"

[node name="botaoSelecionado" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[connection signal="mouse_entered" from="animacao/fundoperdeu/botaoReiniciar" to="." method="_on_botaoReiniciar_mouse_entered"]
[connection signal="pressed" from="animacao/fundoperdeu/botaoReiniciar" to="." method="_on_botaoReiniciar_pressed"]
[connection signal="mouse_entered" from="animacao/fundoperdeu/botaoSair" to="." method="_on_botaoSair_mouse_entered"]
[connection signal="pressed" from="animacao/fundoperdeu/botaoSair" to="." method="_on_botaoSair_pressed"]
